@@ -1,13 +1,14 @@
 package com.beautiflow.global.common.config;
 
-import com.beautiflow.global.common.security.CustomOAuth2UserService;
-import com.beautiflow.global.common.security.CustomSuccessHandler;
-import com.beautiflow.global.common.security.JWTFilter;
+import com.beautiflow.global.common.security.CustomAuthenticationEntryPoint;
+import com.beautiflow.global.common.security.authentication.CustomOAuth2UserService;
+import com.beautiflow.global.common.security.authentication.CustomSuccessHandler;
+import com.beautiflow.global.common.security.filter.JWTExceptionFilter;
+import com.beautiflow.global.common.security.filter.JWTFilter;
 import com.beautiflow.global.common.util.JWTUtil;
-import com.beautiflow.user.repository.UserRepository;
-import jakarta.servlet.http.HttpServletRequest;
 import java.util.Collections;
 import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,68 +17,72 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 @Configuration
+@RequiredArgsConstructor
 @EnableWebSecurity
 public class SecurityConfig {
 
     private final CustomOAuth2UserService customOAuth2UserService;
     private final CustomSuccessHandler customSuccessHandler;
     private final JWTUtil jwtUtil;
+    public final JWTExceptionFilter jwtExceptionFilter;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
 
-    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService,
-            CustomSuccessHandler customSuccessHandler, JWTUtil jwtUtil
-            ) {
-        this.customOAuth2UserService = customOAuth2UserService;
-        this.customSuccessHandler = customSuccessHandler;
-        this.jwtUtil = jwtUtil;
+    @Bean
+    public JWTFilter jwtFilter() {
+        return new JWTFilter(jwtUtil);
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, UserRepository userRepository) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         http
 
-                .cors(corsCustomizer -> corsCustomizer.configurationSource(
-                        request -> {
-                            CorsConfiguration configuration = new CorsConfiguration();
-                            configuration.setAllowedOrigins(
-                                    Collections.singletonList("http://localhost:5173"));
-                            configuration.setAllowedMethods(Collections.singletonList("*"));
-                            configuration.setAllowCredentials(true);
-                            configuration.setAllowedHeaders(Collections.singletonList("*"));
-                            configuration.setMaxAge(3600L);
-                            configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
-                            return configuration;
-                        }))
+            .cors(corsCustomizer -> corsCustomizer.configurationSource(
+                request -> {
+                    CorsConfiguration configuration = new CorsConfiguration();
+                    configuration.setAllowedOrigins(
+                        List.of("http://localhost:3000","http://localhost:5173","http://localhost:8080", "https://beautiflow.co.kr"));
+                    configuration.setAllowedMethods(Collections.singletonList("*"));
+                    configuration.setAllowCredentials(true);
+                    configuration.setAllowedHeaders(Collections.singletonList("*"));
+                    configuration.setMaxAge(3600L);
+                    configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
+                    return configuration;
+                }))
 
-                .csrf(csrf -> csrf.disable())
+            .csrf(csrf -> csrf.disable())
 
-                .formLogin(form -> form.disable())
+            .formLogin(form -> form.disable())
 
-                .httpBasic(httpBasic -> httpBasic.disable())
+            .httpBasic(httpBasic -> httpBasic.disable())
 
-                .oauth2Login((oauth2) -> oauth2
-                        .userInfoEndpoint((userInfoEndpointConfig) -> userInfoEndpointConfig
-                                .userService(customOAuth2UserService))
-                        .successHandler(customSuccessHandler))
+            .oauth2Login((oauth2) -> oauth2
+                .userInfoEndpoint((userInfoEndpointConfig) -> userInfoEndpointConfig
+                    .userService(customOAuth2UserService))
+                .successHandler(customSuccessHandler))
 
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(
                     "/",
-                    "/connect/**",
+					"/connect/**",
                     "/users/signup",
+                    "/users/refresh",
                     "/swagger-ui/**",
                     "/v3/api-docs/**",
-                    "/swagger-ui.html"
+                    "/swagger-ui.html",
+                    "/health"
                 ).permitAll()                        .anyRequest().authenticated())
 
                 .sessionManagement(
                         session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new JWTFilter(jwtUtil, userRepository),
-                        UsernamePasswordAuthenticationFilter.class);
-        ;
+                .addFilterBefore(new JWTFilter(jwtUtil),
+                        UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(jwtExceptionFilter, JWTFilter.class)
+                .exceptionHandling(e -> e
+                        .authenticationEntryPoint(authenticationEntryPoint)
+                );
 
         return http.build();
 
